# plant_reservoir

./: .gitignore  3d_graph.py  README.md  classify.py  csv_manager.py  detect_corners_by_gftt.py  detect_features.py  gp.py  gp_cupy.py  nn.py  nn_gpu.py  optical_flow_gftt.py  pca_dim.py  plot_on_video.py  pooling.py  pyproject.toml  utils.py  utils_cp.py  video_manager.py
data_in/: README.md
data_out/: README.md
image_out/: README.md
video_in/: README.md
video_out/: README.md
