[tool.poetry]
name = "plant_reservoir"
version = "0.1.0"
description = ""
authors = ["mktia <19624453+mktia@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "^1.20.1"
scipy = "^1.6.1"
sklearn = "^0.0"
tqdm = "^4.59.0"
matplotlib = "^3.3.4"
numba = "^0.53.0"
opencv-python = "^4.5.1"
torch = "^1.8.0"
torchvision = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
